# vault-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: deploy_wasm.yml  homebrew-tap.yml
creds/: Cargo.toml  PASSWORD_ROTATION.md
creds/src/: main.rs  ui.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
vault/: Cargo.toml
vault/src/: main.rs
vault_crypto/: Cargo.toml
vault_crypto/src/: lib.rs
vault_wasm/: Cargo.toml
vault_wasm/src/: lib.rs
