[package]
name = "crypto"
version = "0.1.1"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
zeroize = { version = "1.8.1", features = ["derive"] }
getrandom = { version = "0.2.16", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand_core = { version = "0.6", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Crypto"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Build settings for WASM
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization

# Optional: Add features for conditional compilation
[lib]
crate-type = ["cdylib", "rlib"]
