[package]
name = "vault_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
vault_crypto = { path = "../vault_crypto" }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }
