[package]
name = "vault_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
vault_crypto = { path = "../vault_crypto" }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["console"] }
getrandom = { version = "0.2.16", features = ["js"] }
# Force getrandom 0.3 to have the wasm_js feature
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
